--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "verify:sepolia": "pnpm hardhat:verify:sepolia"
   },
   "dependencies": {
+    "ethers": "^6.16.0",
     "hardhat-deploy": "^0.11.45"
   },
   "devDependencies": {
