--- a/packages/nextjs/vercel.json
+++ b/packages/nextjs/vercel.json
@@ -1,6 +1,5 @@
 {
   "buildCommand": "cd ../.. && pnpm install && pnpm sdk:build && pnpm next:build",
   "installCommand": "pnpm install --frozen-lockfile",
-  "framework": "nextjs",
-  "nodeVersion": "20.x"
+  "framework": "nextjs"
 }
